--- a/SCAN AND DINE/menu_cart_updated.html
+++ b/SCAN AND DINE/menu_cart_updated.html
@@ -94,7 +94,7 @@
 
   <!-- Nutrition Modal -->
   <div class="cart-overlay" id="nutrition-overlay" onclick="closeNutritionModal()"></div>
-  <div class="cart-modal" id="nutrition-modal" style="width: 400px; transform: translateX(0); left: 50%; top: 50%; height: auto; border-radius: 20px; opacity: 0; pointer-events: none; margin-left: -200px; margin-top: -200px;">
+  <div class="cart-modal nutrition-popup" id="nutrition-modal">
     <div class="cart-header">
       <h3 id="nutri-modal-title">Nutrition Info</h3>
       <button class="close-btn" onclick="closeNutritionModal()">×</button>
